[refs #82751] Licenses definition: fix buttons vertical align position.

--- a/land/copernicus/theme/skins/copernicus_theme_styles/redesign-app.css
+++ b/land/copernicus/theme/skins/copernicus_theme_styles/redesign-app.css
@@ -6473,6 +6473,10 @@ body.template-licenses-settings table.datagridwidget-table-view td.datagridwidge
   max-width: initial;
 }
 
+body.template-licenses-settings table.datagridwidget-table-view td.datagridwidget-manipulator {
+  vertical-align: middle;
+}
+
 body.template-licenses-settings table.datagridwidget-table-view div.label {
   padding: initial;
 }
